# iotc-nrf-sdk

./: .gitignore  README.md
.github/workflows/: main.yml
common/drivers/sensor/: CMakeLists.txt  Kconfig
common/drivers/sensor/te23142771/: CMakeLists.txt  Kconfig  te23142771.c  te23142771.h
common/iotc-c-lib-overlay/: CMakeLists.txt
common/project-files/: mcuboot_overlay-rsa.conf
common/project-files/configuration/nrf9160_avt9152ns/: pm_static.yml
common/sensors/env_sensors/: CMakeLists.txt  env_sensors.c  env_sensors.h
common/sensors/light_sensor/: CMakeLists.txt  light_sensor.c  light_sensor.h
common/sensors/motion/: CMakeLists.txt  motion.c  motion.h
common/ui/: CMakeLists.txt  buzzer.c  led_pwm.c
common/ui/include/: buzzer.h  led_pwm.h
iotconnect-sdk/: CMakeLists.txt  Kconfig
iotconnect-sdk/cert/: iotconnect_certs_cloud_svcs.h
iotconnect-sdk/include/: iotconnect.h
iotconnect-sdk/nrf-layer-lib/: CMakeLists.txt
iotconnect-sdk/nrf-layer-lib/include/: iotconnect_mqtt.h  iotconnect_sdk_internal.h  iotconnect_socket_https.h  nrf_cert_store.h  nrf_fota.h  nrf_modem_if.h
iotconnect-sdk/nrf-layer-lib/src/: iotconnect_mqtt.c  iotconnect_socket_https.c  nrf_cert_store.c  nrf_fota.c  nrf_modem_if.c
iotconnect-sdk/src/: iotconnect.c
samples/iotc-basic/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/iotc-basic/boards/: nrf9160_avt9152ns.overlay
samples/iotc-basic/src/: main.c  test_certs.c  test_certs.h  ui
samples/iotc-sensors-gps/: .gitignore  CMakeLists.txt  Kconfig  README.md  configuration  mcuboot_overlay-rsa.conf  prj.conf  sample.yaml
samples/iotc-sensors-gps/boards/: nrf9160_avt9152ns.conf  nrf9160_avt9152ns.overlay  nrf9160dk_nrf9160ns.conf  thingy91_nrf9160ns.conf
samples/iotc-sensors-gps/src/: app_common.h  command_handling.c  main.c  sensors  test_certs.c
samples/iotc-sensors-gps/src/gps_controller/: gps_controller.c  gps_controller.h
scripts/: build-project-avt9152.sh  build-project.sh  env.sh  patch-gettimeofday.sh  pull-cjson-lib.sh  setup-iotc-c-lib.sh  setup-machine.sh  setup-sdk.sh
